--- a/templates/user/sellerindex2.html
+++ b/templates/user/sellerindex2.html
@@ -217,22 +217,22 @@ body.modal-open {
         <nav id="navmenu" class="navmenu" style="margin-right: -100px;">
             <ul class="navbar-nav d-flex flex-row align-items-center"> <!-- Flex-row for horizontal layout -->
                 <li class="nav-item">
-                    <a href="addbook" class="nav-link">Add a Book</a>
+                    <a href="/addbook" class="nav-link">Add a Book</a>
+                </li>
+{#                <li class="nav-item">#}
+{#                    <a href="#about" class="nav-link">Categories</a>#}
+{#                </li>#}
+                <li class="nav-item">
+                    <a href="/fav_view" class="nav-link">Favorites</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">Categories</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#services" class="nav-link">Favorites</a>
-                </li>
-                <li class="nav-item">
-                    <a href="userhome" class="nav-link">Buy</a>
+                    <a href="/userhome" class="nav-link">Buy</a>
                 </li>
                 <li class="nav-item">
                     <a href="/home_chat" class="nav-link">Chats</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#team" class="nav-link">Profile</a>
+                    <a href="/profile" class="nav-link">Profile</a>
                 </li>
             </ul>
         </nav>
