--- a/templates/user/sellerindex1.html
+++ b/templates/user/sellerindex1.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!-- Vendor CSS Files -->
   <link href="../static/admin/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../static/admin/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -210,23 +210,23 @@ body.modal-open {
         <!-- Navigation Menu -->
         <nav id="navmenu" class="navmenu" style="margin-right: -100px;">
             <ul class="navbar-nav d-flex flex-row align-items-center"> <!-- Flex-row for horizontal layout -->
+{#                <li class="nav-item">#}
+{#                    <a href="addbook" class="nav-link">Add a Book</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a href="#about" class="nav-link">Categories</a>#}
+{#                </li>#}
                 <li class="nav-item">
-                    <a href="addbook" class="nav-link">Add a Book</a>
+                    <a href="/fav_view" class="nav-link">Favorites</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">Categories</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#services" class="nav-link">Favorites</a>
-                </li>
-                <li class="nav-item">
-                    <a href="userhome" class="nav-link">Buy</a>
+                    <a href="/userhome" class="nav-link">Buy</a>
                 </li>
                 <li class="nav-item">
                     <a href="/home_chat" class="nav-link">Chats</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#team" class="nav-link">Profile</a>
+                    <a href="/profile" class="nav-link">Profile</a>
                 </li>
             </ul>
         </nav>
